--- a/_posts/2024-11-09-1.md
+++ b/_posts/2024-11-09-1.md
@@ -9,6 +9,7 @@ header-mask: 0.4
 published: false
 tags:
   - 题解
+  - 省选/NOI−
   - 队列
   - 单调队列
   - 前缀和
@@ -18,11 +19,11 @@ tags:
 
 > [题目传送门](https://www.luogu.com.cn/problem/P5665)
 
-## 题意分析
+# 题意分析
 
 
 
-## AC代码
+# AC代码
 
 ```cpp
 //#include<bits/stdc++.h>
@@ -103,12 +104,3 @@ int main(){
 	return 0;
 }
 ```
-
-
-
-
-
-
-
-
-
