--- a/_posts/2024-11-18-1.md
+++ b/_posts/2024-11-18-1.md
@@ -27,18 +27,10 @@ words:
 给定一张大小为 $n$ 的完全图，点的编号为 $1\sim n$，点 $i$ 与点 $j$ 之间有一条权值为 $\dfrac{f(i,j)+f(j,i)}2$ 的无向边，其中：
 $$
 f(i,j)=
-\left\{
-\begin{aligned}
-\begin{aligned}
-&\dfrac{i\cdot f(j,i\bmod j)}{i\bmod j}\\
-&\dfrac ij
-\end{aligned}
-\begin{aligned}
-&i\bmod j\ne0\\\\
-&i\bmod j=0\\
-\end{aligned}
-\end{aligned}
-\right.
+\begin{cases}
+\dfrac{i\cdot f(j,i\bmod j)}{i\bmod j}&i\bmod j\neq0\\
+\dfrac ij&i\bmod j=0
+\end{cases}
 $$
 求这张图的最小生成树。
 
