--- a/_posts/2024-11-18-2.md
+++ b/_posts/2024-11-18-2.md
@@ -31,7 +31,7 @@ words:
 
 参考[例题（洛谷P3375）](https://www.luogu.com.cn/problem/P3375)。
 
-在一个字符串 $s1$（通常称之为”文本串“）中查找另一个字符串 $s2$（通常称之为”模式串“）的出现次数和出现位置。
+在一个字符串 $s1$（通常称之为“文本串”）中查找另一个字符串 $s2$（通常称之为“模式串”）的出现次数和出现位置。
 
 （以下 $n,m$ 分别为 $s1,s2$ 的长度）
 
@@ -100,7 +100,7 @@ int main(){
 
 <p style="color: grey;text-align: center;font-size: 15px;">图片来源：见参考链接</p>
 
-可以发现，KMP 算法在失配时”将模式串移到了适配位置的后方“。
+可以发现，KMP 算法在失配时“将模式串移到了适配位置的后方”。
 
 显然，我们不可能真的去这么做，因为太费时了。
 
