--- a/_posts/2024-11-19-1.md
+++ b/_posts/2024-11-19-1.md
@@ -10,7 +10,7 @@ tags:
   - 题解
   - 模拟
   - 贪心
-  - 提高+/省选−
+  - 普及/提高−
 words:
   - 多解
 ---
@@ -18,6 +18,12 @@ words:
 > [题目传送门](https://www.luogu.com.cn/problem/P3434)
 
 实话实说，真不觉得能够评蓝......
+
+***
+
+$2025/7/20$ 更新：好了，降黄了……
+
+***
 
 ## $\mathcal O\left(n\right)$ 做法
 
