--- a/_posts/2024-11-21-1.md
+++ b/_posts/2024-11-21-1.md
@@ -7,8 +7,9 @@ author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
+  - 题解
   - 普及+/提高
-  - 倍增算法
+  - 倍增
   - LCA
   - 树链剖分
 words:
@@ -29,7 +30,7 @@ words:
 
 首先这样一眼树链剖分，将一对多的非线性信息转化为线性信息后处理即可。
 
-但是，本体还存在更简单的算法：倍增。
+但是，本题还存在更简单的算法：倍增。
 
 可以参考[倍增 LCA](/2024/10/20/2/#%E5%80%8D%E5%A2%9Elca)，在从 $u,v$ 跳到 $\operatorname{lca}(u,v)$ 的过程中判断是否存在 $c_i$ 即可。
 
