--- a/_posts/2024-12-14-6.md
+++ b/_posts/2024-12-14-6.md
@@ -10,6 +10,7 @@ tags:
   - 题解
   - 普及+/提高
   - 线段树
+  - 状态压缩
 words:
 ---
 
@@ -252,7 +253,7 @@ int main(){
 
 <details class="warning" open>
     <summary style="color:red;">警告</summary>
-    
+
     <div style="font-weight:bolder;text-align:center;color:red;font-size:30px">警告：请不要把位运算符 <code>|</code> 写为逻辑运算符 <code>||</code></div>
 </details>
 
