--- a/_posts/2025-01-18-1.md
+++ b/_posts/2025-01-18-1.md
@@ -113,9 +113,10 @@ int main(){
 
 令 $dp[i]$ 表示末尾元素二进制位上权值为 $2^i$ 的位为 $1$ 的子序列的最长长度。
 
-那么就看所有被 $a[i]$ 包含的 $2^j$ 的 $dp[j]$，取最大值后加 $1$ 即 $dp[i]$。此时我们又可以使用 $dp[i]$ 将这些 $dp[j]$ 全部更新。
+那么就看所有被 $a[i]$ 包含的 $2^j$ 的 $dp[j]$，取最大值后加 $1$ 可以得到以 $a[i]$ 结尾的最长子序列长度 $s$。此时我们又可以使用 $s$ 将这些 $dp[j]$ 全部更新。
 
-最终答案即 $\max\limits_{i=1}^ndp[i]$。
+
+最终答案即 $\max\limits_{i=1}^{\log V}dp[i]$。
 
 # AC 代码
 
