--- a/_posts/2025-01-18-3.md
+++ b/_posts/2025-01-18-3.md
@@ -10,7 +10,7 @@ tags:
   - 题解
   - 贪心
   - 位运算
-  - 倍增算法
+  - 倍增
 words:
   - 二进制
   - 按位&
@@ -38,11 +38,11 @@ $$
 
 一个显然成立的贪心思路：优先满足**高位**。
 
-因此我们可以使用倍增算法来枚举答案。
+因此我们可以使用倍增来枚举答案。
 
 而检查答案正确性的函数内容也很简单，我们直接尝试去找不合并能够与出当前答案 $ans$ 的段数 $cnt$，判断 $k+cnt$ 是否大于 $n$ 即可。是则代表可以，否则不可以。
 
-时间复杂度：$\mathcal O(n\log n)$。（严格意义上来说，是 $\mathcal O(30n)=O(n)$......）
+时间复杂度：$\mathcal O(n\log n)$。（~~严格~~意义上来说，是 $\mathcal O(30n)=O(n)$......）
 
 # AC 代码
 
