--- a/_posts/2025-01-21-3.md
+++ b/_posts/2025-01-21-3.md
@@ -8,7 +8,7 @@ header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
   - 题解
-  - 普及/提高−
+  - 普及−
   - 平衡树
   - FHQ Treap
 words:
@@ -23,6 +23,18 @@ words:
 即找 $a_i$ 的前驱与后继。
 
 很容易想到**平衡树**维护。
+
+***
+
+<details class="note">
+    <summary>$\text{Updated at 2025/7/20}$</summary>
+    <p>
+        此时迁移 Blog 的我非常懵 b，我理解不了一个<span style="color:rgb(243, 156, 17);font-weight: bold;">普及−</span>（虽然当时是<span style="font-weight:bold;color:rgb(255, 193, 22)">普及/提高−</span>）的题目我为什么要写 FHQ Treap。
+    </p>
+    <p>
+        况且 $n\leq32767$，你直接 $\mathcal O\left(n^2\log n\right)$ 排序写完不就好了吗？
+    </p>
+</details>
 
 # AC 代码
 
