--- a/_posts/2025-01-22-7.md
+++ b/_posts/2025-01-22-7.md
@@ -34,7 +34,7 @@ words:
 
 ![](/img/2025/01/026.png)
 
-假设原来的根节点是 $x$，对于 $x$ 的每一个子节点 $y$，其作为根时**子树内**深度之和 $dp_x,dp_y$ 应当满足：
+假设原来的根节点是 $x$，对于 $x$ 的每一个子节点 $y$，其**子树内**深度之和 $dp_x,dp_y$ 应当满足：
 
 $$
 \begin{aligned}
