--- a/_posts/2025-01-24-1.md
+++ b/_posts/2025-01-24-1.md
@@ -8,7 +8,7 @@ header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
   - 题解
-  - 提高+/省选−
+  - 普及+/提高
   - 图论
   - Tarjan
   - 拓扑排序
@@ -23,6 +23,13 @@ words:
 > 一道水的 <span style="color:rgb(52, 152, 219);"><b>提高+/省选−</b></span>，但是可能会降 <span style="color:rgb(82, 196, 26);"><b>普及+/提高</b></span>。
 >
 > 因为这个请求升 <span style="color:rgb(52, 152, 219);"><b>提高+/省选−</b></span> 的理由是另一道差不多的题目是 <span style="color:rgb(52, 152, 219);"><b>提高+/省选−</b></span>，但是该题已经降 <span style="color:rgb(82, 196, 26);"><b>普及+/提高</b></span>。
+>
+> <details class="info" open>
+>     <summary>$\text{Updated at 2025/7/21}$</summary>
+>     <p>
+>         真的降 <span style="color:rgb(82, 196, 26);"><b>普及+/提高</b></span> 了……
+>     </p>
+> </details>
 
 # 前置知识
 
