--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -20,17 +20,22 @@ words:
   - 加法原理
   - 乘法原理
   - 加乘原理
-  - 生成函数
+  - 生成函数与递推关系
+  - 多项式卷积
   - 容斥原理鸽巢原理抽屉原则
   - "Min-max容斥原理"
   - "Min-max 容斥原理"
   - "kth Min-Max容斥原理"
   - "kth Min-Max 容斥原理"
-  - 牛顿二项式定理
+  - 广义牛顿二项式定理
   - 二项式反演
   - 分拆数
   - 斯特林数卡特兰数贝尔数皮萨诺周期欧拉函数CatalanStirlingBell
   - 错位排列错排问题
+  - 格路问题路径计数问题
+  - Fibonacci 数列斐波那契数列
+  - 分拆数泰勒展开Ferrers图象
+  - 普通幂下降幂上升幂
 ---
 > [参考资料](/file/2025/02/combinatorial-mathematics.rar) [参考资料](/file/2025/02/math.pdf) [参考资料](/file/2025/07/math2.pdf)
 
