--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -9,6 +9,7 @@ header-mask: 0.4
 tags:
   - 题解
   - 数学
+  - 数论
   - 提高+/省选−
   - 省选/NOI−
   - CRT
@@ -30,7 +31,7 @@ words:
   - NOIP2012
   - 艾弗森括号Iverson括号
   - Baby-Step Giant-Step大步小步算法BSGSexBSGS离散对数
-  - Lucas定理 exLucas算法 扩展鲁卡瑟
+  - Lucas定理 exLucas算法 扩展卢卡斯 Lucas 定理 exLucas 算法
   - 洛谷P1082洛谷PP1495洛谷P5656
   - 题解：[NOIP 2012 提高组] 同余方程
   - 题解：中国剩余定理（CRT）/ 曹冲养猪
@@ -43,6 +44,15 @@ words:
   - "[CQOI2007] 余数求和洛谷P2261"
   - "[国家集训队] 礼物洛谷P2183"
   - 洛谷P4720洛谷P3807洛谷P4195P3846P4777P1495P5656P1482P4195P1082
+  - "Miller-Rabin素性测试Miller-Rabin 素性测试"
+  - Fermat素性测试 Fermat 素性测试
+  - 裴蜀定理
+  - 欧拉定理扩展欧拉定理费马小定理线性求逆元
+  - exLucas定理
+  - 数论分块整除分块
+  - 积性函数莫比乌斯函数迪利克雷卷积线性筛杜教筛欧拉函数
+  - 莫比乌斯反演莫比乌斯变换
+  - 群论
 ---
 
 > [参考资料](/file/2025/02/math.pdf) [参考资料](/file/2025/07/number-theory.pdf)
@@ -2723,6 +2733,13 @@ $$
 r=\left\lfloor\dfrac{n}{\left\lfloor\dfrac nl\right\rfloor}\right\rfloor
 $$
 
+而对于向上取整的情形，即对于 $l$ 对应的 $\left\lceil\dfrac nl\right\rceil$，要寻找一个最大的 $r$ 使得 $\left\lceil\dfrac nr\right\rceil$，从而找到区间 $[l,r]$。
+
+则有：
+
+$$
+r=\left\lfloor\dfrac{n-1}{\left\lfloor\dfrac {n-1}l\right\rfloor}\right\rfloor
+$$
 
 ## 单一参数
 
@@ -2875,6 +2892,7 @@ $$
 不妨令 $n\leq m$，否则交换 $n,m$。
 
 模运算不好处理，转换一下：
+
 $$
 \sum_{i=1}^n\sum_{j=1}^m[i\neq j]\left(n-i\left\lfloor\dfrac ni\right\rfloor\right)\left(m-j\left\lfloor\dfrac mj\right\rfloor\right)
 $$
