--- a/_posts/2025-5-16-2.md
+++ b/_posts/2025-5-16-2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "题解：[NOIP 2015 提高组] 运输计划"
-subtitle: "洛谷2680"
+subtitle: "洛谷P2680"
 date: 2025-5-16
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
