--- a/_posts/2025-5-24-2.md
+++ b/_posts/2025-5-24-2.md
@@ -16,7 +16,7 @@ words:
   - 阶乘逆元积求组合数
 ---
 
-> [数据包](/file/2025/05/rank.zip) [洛谷自建题目]()
+> [数据包](/file/2025/05/rank.zip) [洛谷自建题目](https://www.luogu.com.cn/problem/U565589)
 
 # 题目
 
