--- a/_posts/2025-6-7-1.md
+++ b/_posts/2025-6-7-1.md
@@ -12,6 +12,7 @@ tags:
   - 线性代数
   - 提高+/省选−
   - 普及+/提高
+  - 未完
 words:
   - 矩阵快速幂
   - 逆序对
@@ -22,6 +23,7 @@ words:
   - 题解：【模板】行列式求值
   - 题解：行列式求值题解：【模板】矩阵求逆题解：矩阵求逆
   - 题解：矩阵快速幂题解：【模板】矩阵快速幂
+  - 线性基
 ---
 
 > [参考资料](/file/2025/06/det.rar) [参考 Blog](https://www.cnblogs.com/torsor/p/3554028.html) [参考资料](/file/2025/07/16/linear-algebra.pdf)
@@ -31,6 +33,7 @@ words:
 ## 简介
 
 矩阵源于线性方程组，例如对于以下方程组：
+
 $$
 \begin{cases}
 x_1+2x_2-x_3&=2\\
