--- a/_posts/2025-7-13-2.md
+++ b/_posts/2025-7-13-2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "题解：可持久化线段树 2"
-subtitle: "静态区间第 k 小问题"
+subtitle: "静态区间第 $k$ 小问题"
 date: 2025-7-13
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -22,7 +22,7 @@ words:
 
 > [例题链接](https://www.luogu.com.cn/problem/P3834)
 
-# 静态区间第 k 小
+# 静态区间第 $k$ 小
 
 可以使用可持久化权值线段树解决。
 
