--- a/_posts/2025-7-17-1.md
+++ b/_posts/2025-7-17-1.md
@@ -23,13 +23,15 @@ words:
   - 快速数论变换FNTT
 ---
 
-> 本文主要介绍 **傅里叶变换** 及 **快速傅里叶变换**（FFT）等在 **OI范围内** 的应用。
+# 多项式乘法
+
+> 本部分主要介绍 **傅里叶变换** 及 **快速傅里叶变换**（FFT）等在 **OI范围内** 的应用。
 >
 > [参考 Blog](https://www.cnblogs.com/pks-t/p/9251147.html) [参考 Blog](https://www.cnblogs.com/RabbitHu/p/FFT.html) [参考 Blog](https://www.cnblogs.com/zwfymqz/p/8244902.html) [参考文章](https://www.luogu.com.cn/article/jajiv90y)
 >
 > 本文会简要介绍 FFT 的原理、思想，涉及诸如 **复平面**、**平面向量** 等数学内容，文中会简要介绍。
 
-# FFT 快速傅里叶变换
+## FFT 快速傅里叶变换
 
 > 傅里叶变换的本质就是将一个多项式在 **系数表示法** 和 **点值表示法** 之间转换。
 >
@@ -37,9 +39,9 @@ words:
 
 FFT 可以在 $\mathcal O\left(n\log n\right)$ 的时间复杂度内计算出两个 $n$ 次多项式的乘积。同时，考虑大整数可视为关于 $10$ 的多项式，因此 FFT 也可以用于优化高精度乘法。
 
-## 前置知识
+### 前置知识
 
-### 复数与复平面
+#### 复数与复平面
 
 我们对实数域进行**扩域**可以得到复数域，这是最大的已知域。
 
@@ -57,7 +59,7 @@ $$
 
 复数的运算律与实数相同。
 
-### 几何意义
+#### 几何意义
 
 对于复数 $z=a+b\mathrm i$，对应的复数点 $Z(a,b)$，对应平面向量 $\overrightarrow{OZ}=(a,b)$ 可以使用极坐标 $(r,\theta)$ 表示。$r=\sqrt{a^2+b^2}$ 为向量的模，$\theta$ 为向量夹角（实轴正方向到 $z$ 对应向量的夹角），满足：
 
@@ -76,13 +78,13 @@ $$
 * 乘法：模相乘，幅角相加。
 * 除法：模相除，幅角相减。
 
-### 欧拉公式
+#### 欧拉公式
 
 $$
 e^{\mathrm ix}=\cos x+\mathrm i\sin x
 $$
 
-### 单位根
+#### 单位根
 
 称单位圆为复平面内以 $(0,0)$ 为原点，$1$ 为半径的圆。
 
@@ -116,7 +118,7 @@ $$
 $$
 
 
-### 代码实现
+#### 代码实现
 
 在 C++ 的 STL 中，提供了标准库 `<complex>` 作为复数基本类型。
 
@@ -185,9 +187,9 @@ complex operator *=(complex &x,complex y){
 
 [手写用时](https://www.luogu.com.cn/record/225070814) $\text{3.48s}$，[使用 STL 用时](https://www.luogu.com.cn/record/225090029) $\text{2.52s}$。
 
-## DFT/IDFT 离散傅里叶（逆）变换
+### DFT/IDFT 离散傅里叶（逆）变换
 
-### 多项式的点值表示法
+#### 多项式的点值表示法
 
 多项式的常见表示方法是**系数表示法**。设 $n-1$ 次多项式 $f(x)$：
 
@@ -201,13 +203,13 @@ DFT 将 $n$ 个复数点 $\omega_n^0,\omega_n,\omega_2^2,\cdots,\omega_n^{n-1}$ 
 
 ### IDFT 离散傅里叶逆变换
 
-IDFT 将 $n$ 次多项式 $f(x)$ 的 DFT 结果当作另一个 $n$ 多项式 $g(x)$ 的系数，取 $\omega_n^{-0},\omega_n^{-1},\omega_n^{-2},\cdots,\omega_n^{-(n-1)}$ 再做一次 DFT 即可**还原**原来系数表示法的 $f(x)$。这个过程被称为 IDFT（离散傅里叶逆变换）。
+IDFT 将 $n-1$ 次多项式 $f(x)$ 的 DFT 结果当作另一个 $n-1$ 次多项式 $g(x)$ 的系数，取 $\omega_n^{-0},\omega_n^{-1},\omega_n^{-2},\cdots,\omega_n^{-(n-1)}$ 再做一次 DFT 即可**还原**原来系数表示法的 $f(x)$。这个过程被称为 IDFT（离散傅里叶逆变换）。
 
 具体而言，若还原得到的结果为 $a_0,a_1,\cdots,a_{n-1}$，则实际系数为 $\dfrac{\operatorname{Re}(a_0)}n,\dfrac{\operatorname{Re}(a_{1})}n,\cdots,\dfrac{\operatorname{Re}(a_{n-1})}n$。
 
 也正因此，要取**单位根** $\omega_n^k$ 代入。	
 
-## FFT 快速傅里叶变换
+### FFT 快速傅里叶变换
 
 考虑到，朴素的 DFT/IDFT 的时间复杂度为 $\mathcal O\left(n^2\right)$，这需要一些优化，因此有了 FFT。FFT 的本质是基于**分治**思想的 DFT。（事实上，FFT 应当被称为 FDFT，但由于只有 DFT 能够快速地求，因此 FFT 默认指 FDFT。）
 
@@ -257,15 +259,15 @@ $$
 
 这样，FFT 的时间复杂度便被优化到了 $\mathcal O\left(n\log n\right)$。
 
-### 实现细节
+#### 实现细节
 
 * 对于整系数多项式相乘，取答案系数时，应当取实部**四舍五入**后的结果。
 
   因为 FFT 使用的 `double` 具有**浮点误差**。
 
-# FFT 例题
+### FFT 例题
 
-## P3803 【模板】多项式乘法（FFT）
+#### P3803 【模板】多项式乘法（FFT）
 
 > [例题链接](https://www.luogu.com.cn/problem/P3803)
 
@@ -350,7 +352,7 @@ int main(){
 }
 ```
 
-## P1919 【模板】高精度乘法 | A*B Problem 升级版
+#### P1919 【模板】高精度乘法 | A*B Problem 升级版
 
 > [例题链接](https://www.luogu.com.cn/problem/P1919)
 
@@ -442,7 +444,7 @@ int main(){
 }
 ```
 
-# NTT 快速数论变换
+### NTT 快速数论变换
 
 事实上，「NTT」是指「数论变换」，而「FNTT」才是「快速数论变换」。但是，在算法竞赛中常提到的 NTT 一词，往往实际指的是快速数论变换，一般默认「数论变换」是指「快速数论变换」。
 
@@ -450,9 +452,9 @@ int main(){
 >
 > NTT 可以**在模意义下** $\mathcal O\left(n\log n\right)$ 计算多项式乘法，并且不需要 FFT 的复数，也不需要浮点数运算，从而使其**精度更高**、**常数更小**。
 
-## 前置知识
+### 前置知识
 
-### 原根与阶
+#### 原根与阶
 
 设 $a\perp p$。若最小的正整数 $n$ 满足 $a^n\equiv1\pmod p$，称 $n$ 为 $a$ 模 $p$ 的**阶**，记为 $n=\delta_p(a)$。
 
@@ -483,13 +485,13 @@ p=998244353=7\times17\times2^{23}+1,g=3
 $$
 
 
-## NTT 快速数论变换
+### NTT 快速数论变换
 
 NTT 其实很简单，设 $g$ 是模数 $p$ 的原根，将 $\omega_n$ 替换为 $g^{\large\frac{p-1}{n}}$ 即可。
 
 注意在 NTT 中也需要将 $n$ 补全至 $2$ 的正整数次幂，这可以保证 $(p-1)\bmod n=0$。
 
-## P3803 【模板】多项式乘法（FFT） AC 代码
+### P3803 【模板】多项式乘法（FFT） AC 代码
 
 ```cpp
 //#include<bits/stdc++.h>
@@ -582,11 +584,11 @@ int main(){
 }
 ```
 
-# FFT/NTT 优化技巧
+## FFT/NTT 优化技巧
 
 尽管 FFT/NTT 的时间复杂度为 $\mathcal O\left(n\log n\right)$，但是因为涉及递归和较为庞大的内存操作（数组），因此常数较大。可以进行一定程度上的优化。
 
-## FFT 三次变两次
+### FFT 三次变两次
 
 对于基于复数的 FFT，可以将三次 FFT 操作转化为两次，从而优化常数。
 
