--- a/_posts/2025-7-18-1.md
+++ b/_posts/2025-7-18-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "题解：[COTS 2024] 双双决斗 Dvoboj"
-subtitle: "动态单点修改ST表 | 阈值分治"
+subtitle: "洛谷P10680 | 动态单点修改ST表 | 阈值分治"
 date: 2025-7-18
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -12,6 +12,8 @@ tags:
   - ST表
   - 分治
 words:
+  - COTS2024
+  - 阈值分治
   - 根号分治
 ---
 
