--- a/_posts/2024-10-23-1.md
+++ b/_posts/2024-10-23-1.md
@@ -90,9 +90,9 @@ aamda
 
 记录每一种状态最早出现的下标，查找时查找与之状态相同（偶回文）或有一个字符只出现了一次即可。
 
-维护明显是**不能**直接像状压DP一样用数组维护（$\text{MLE}$），所以考虑 `map` 和 `unordered_map`。
+维护明显是**不能**直接像状压 DP 一样用数组维护（$\text{MLE}$），所以考虑 `map` 和 `unordered_map`。
 
-本题理论上来讲，是应当使用哈希算法的，也就是使用 `unordered_map`，然而~~数据过水~~实测 `map` 也能够通过此题。（前者最高 $67ms$，后者最高 $159ms$）。
+本题理论上来讲，是应当使用哈希算法的，也就是使用 `unordered_map`，然而~~数据过水~~实测 `map` 也能够通过此题。（前者最高 $67\text{ms}$，后者最高 $\text{159ms}$）。
 
 ## AC代码
 
