--- a/_posts/2024-12-14-9.md
+++ b/_posts/2024-12-14-9.md
@@ -40,7 +40,7 @@ words:
 
 ***
 
-而**树状数组**就是一种兼具修改、查询的**高效**数据结构，修改、查询复杂度均为 $\mathcal O(\log n)$。
+而**树状数组**（Binary Indexed Tree，Fenwick 树）就是一种兼具修改、查询的**高效**数据结构，修改、查询复杂度均为 $\mathcal O(\log n)$。
 
 > 事实上，树状数组能解决的问题是线段树能解决的问题的子集：树状数组能做的，线段树一定能做；线段树能做的，树状数组不一定可以。然而，树状数组的代码要远比线段树短，时间效率常数也更小，因此仍有学习价值。
 
