--- a/_posts/2025-01-21-7.md
+++ b/_posts/2025-01-21-7.md
@@ -22,7 +22,7 @@ words:
 >
 > 前置知识：[AC 自动机](/2025/01/19/1/)
 >
-> 又水一道 <span style="color:rgb(157, 61, 207);"><b>省选/NOI−</b></span>。
+> 又水一道 <span style="color:rgb(52, 152, 219);"><b>提高+/省选−</b></span>。
 >
 > 弱化版：[[USACO15FEB] Censoring S](/2025/01/21/8/)。
 
