--- a/_posts/2025-7-16-4.md
+++ b/_posts/2025-7-16-4.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "题解：[NOI2012] 随机数生成器"
-subtitle: "矩阵快速幂优化递推"
+subtitle: "洛谷 P2044 | 矩阵快速幂优化递推"
 date: 2025-6-7
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -23,6 +23,7 @@ words:
 显然，因为 $n\leq10^{18}$，不能直接计算。因此考虑优化。
 
 考虑到：
+
 $$
 X_{n+1}\equiv aX_n+c\pmod m
 $$
