--- a/_posts/2025-7-25-1.md
+++ b/_posts/2025-7-25-1.md
@@ -10,19 +10,24 @@ tags:
   - 题解
   - 普及−
   - 普及/提高−
+  - 普及+/提高
   - DP
-  - NOIP 二十年 DP 训练
+  - 未完
 words:
   - "P1048 题解：[NOIP 2005 普及组] 采药"
   - 01 背包01背包
   - "P1060 题解：[NOIP 2006 普及组] 开心的金明"
-  - 完全背包
+  - 完全背包最大子段和
   - "P1077 题解：[NOIP 2012 普及组] 摆花NOIP2012"
   - "P1057 题解：[NOIP 2008 普及组] 传球游戏NOIP2008"
   - NOIP2005NOIP2006NOIP2006NOIP2007NOIP2008NOIP2009NOIP2010NOIP2011NOIP2012NOIP2013NOIP2014NOIP2015NOIP2016NOIP2017NOIP2018NOIP2019NOIP2020NOIP2021NOIP2022NOIP2023NOIP2024
   - "P1095 题解：[NOIP 2007 普及组] 守望者的逃离"
   - "P1970 题解：[NOIP 2013 提高组] 花匠"
   - "P1351 题解：[NOIP 2014 提高组] 联合权值"
+  - "P2679 题解：[NOIP 2015 提高组] 子串"
+  - "P1005 题解：[NOIP 2007 提高组] 矩阵取数游戏"
+  - "P5020 题解：[NOIP 2018 提高组] 货币系统"
+  - "P1982 题解：[NOIP 2013 普及组] 小朋友的数字"
 ---
 
 > 持续更新中，对于较为简单的题目，会直接给出题解。对于较为复杂的题目，会给出**核心摘要**及**详细题解的链接**。
@@ -35,6 +40,7 @@ words:
 
 <details class="success">
     <summary>参考代码</summary>
+
 
 ```cpp
 //#include<bits/stdc++.h>
@@ -74,6 +80,7 @@ int main(){
 	return 0;
 }
 ```
+
 </details>
 
 # NOIP2006
@@ -85,6 +92,7 @@ int main(){
 
 <details class="success">
     <summary>参考代码</summary>
+
 
 ```cpp
 //#include<bits/stdc++.h>
@@ -126,9 +134,154 @@ int main(){
 	return 0;
 }
 ```
+
 </details>
 
 # NOIP2007
+
+> [[NOIP 2007 普及组] 守望者的逃离]([NOIP 2007 普及组] 守望者的逃离)
+
+贪心即可。
+
+<details class="success">
+    <summary>参考代码</summary>
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+long long m,s,t,run,fly;
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+
+	cin>>m>>s>>t;
+	for(int i=1;i<=t;i++){
+		run+=17;//跑步17m/s
+		if(m>=10){
+			m-=10;
+			fly+=60;
+		}else m+=4;
+		run=max(run,fly);
+		if(run>=s){
+			cout<<"Yes"<<endl<<i<<endl;
+			return 0;
+		}
+	}cout<<"No"<<endl<<run<<endl;
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+</details>
+
+
+> [[NOIP 2007 提高组] 矩阵取数游戏](https://www.luogu.com.cn/problem/P1005)
+
+首先需要理解题意：
+
+* 不同行之间是独立的。
+* 设计一种方式，使得行内得分最大。
+* 求所有行的得分之和。
+
+考虑单独一行如何做。设 $\textit{dp}_{l,r}$ 表示取数取走 $a_l,a_{l+1},\cdots,,a_r$ 时的最大得分。
+
+则有：
+
+$$
+\textit{dp}_{l,r}=2\max\left(\textit{dp}_{l+1,r}+a_l,\textit{dp}_{l,r-1}+a_r\right)
+$$
+
+考虑第 $i$ 次取 $x$，$x$ 的贡献是 $2^ix$，即上式。因为每次乘 $2$，里面的数便相当于乘上 $2^{i'}$。
+
+<details class="success">
+    <summary>参考代码</summary>
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm> 
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+typedef __int128 lll;
+constexpr const int N=80,M=80;
+int n,m,a[N+1][M+1];
+lll f(int i,int l,int r){
+	static lll mem[N+1][N+1][N+1];
+	if(l<1||m<l||r<1||m<r||r<l){
+		return 0;
+	}
+	lll &ans=mem[i][l][r];
+	if(ans){
+		return ans;
+	}
+	return ans=2*max(f(i,l+1,r)+a[i][l],f(i,l,r-1)+a[i][r]);
+}
+template<typename T>
+void Write(T x){
+	static char s[101];
+	int top=0;
+	do{
+		s[++top]=x%10^'0';
+		x/=10;
+	}while(x);
+	while(top){
+		cout<<s[top--];
+	}
+}
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	cin>>n>>m;
+	for(int i=1;i<=n;i++){
+		for(int j=1;j<=m;j++){
+			cin>>a[i][j];
+		}
+	}
+	lll ans=0;
+	for(int i=1;i<=n;i++){
+		ans+=f(i,1,m);
+	}
+	Write(ans);
+	cout<<'\n';
+	
+	cout.flush();
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+</details>
+
+
 
 # NOIP2008
 
@@ -187,6 +340,7 @@ int main(){
 	return 0;
 }
 ```
+
 </details>
 
 # NOIP2009
@@ -212,6 +366,7 @@ $$
 
 <details class="success">
     <summary>参考代码</summary>
+
 
 ```cpp
 //#include<bits/stdc++.h>
@@ -259,6 +414,7 @@ int main(){
 	return 0;
 }
 ```
+
 </details>
 
 # NOIP2013
@@ -288,6 +444,7 @@ $$
 
 <details class="success">
     <summary>参考代码</summary>
+
 
 ```cpp
 //#include<bits/stdc++.h>
@@ -398,6 +555,84 @@ int main(){
 	return 0;
 }
 ```
+
+</details>
+
+> [[NOIP 2013 普及组] 小朋友的数字](https://www.luogu.com.cn/problem/P1982)
+
+最大子段和问题。
+
+记数字为 $\textit{num}_i$，特征值为 $a_i$，分数为 $f_i$。
+
+则有：
+
+$$
+\begin{aligned}
+a_i&=\max_{1\leq l\leq r\leq i}\sum_{j=l}^r\textit{num}_j\\
+&=\max\left(a_{i-1}+\textit{num}_i,a_{i-1}\right)\\
+f_i&=
+\begin{cases}
+a_1&i=1\\
+\max\left(f_{i-1},f_{i-1}+\max\limits_{j=1}^{i-1}a_j\right)&i>1
+\end{cases}
+\end{aligned}
+$$
+
+答案为 $\max\limits_{i=1}^nf_i\bmod p$。$\mathcal O(n)$ 计算。
+
+<details class="success">
+    <summary>参考代码</summary>
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm> 
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+typedef __int128 lll;
+typedef long long ll;
+constexpr const int N=1e6;
+int n,P;
+ll a[N+1];
+lll f[N+1];
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	cin>>n>>P;
+	f[0]=-(1ll<<62);
+	for(int i=1;i<=n;i++){
+		cin>>a[i];
+		a[i]=max(a[i-1]+a[i],a[i]);
+		f[i]=max(f[i-1],(lll)a[i]);
+	}
+	lll pl=f[1]+a[1],ans=f[1];
+	for(int i=2;i<=n;i++){
+		ans=max(ans,pl);
+		pl=max(pl,pl+f[i]);
+	}
+	cout<<(int)(ans%P)<<'\n';
+	
+	cout.flush();
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
 </details>
 
 # NOIP2014
@@ -419,19 +654,20 @@ $n$ 个点却是 $n-1$ 条边，显然是一棵树，令根节点为 $1$。记 $
   记 $x=f_u$，$y_1,y_2,\cdots,y_k$ 为 $x$ 的子节点。
 
   则有：
-  
+
   $$
   \sum_{i=1}^k\sum_{j=1}^k[i\neq j]w_{y_i}w_{y_j}=\sum_{i=1}^kw_i\left(\sum_{j=1}^kw_{y_j}-w_{y_i}\right)
   $$
-  
+
   容易发现 $\sum\limits_{j=1}^kw_{y_j}$ 是定值，那么预处理出来，就可以 $\mathcal O(1)$ 计算。
-  
+
   这一部分总时间复杂度：$\mathcal O(n)$。
 
 那么，我们就在 $\mathcal O(n)$ 的时间内做完了这道题。事实上，可以枚举每一个点作为根节点的时候的子节点之间的贡献，只有一种情况，但是本质相同。
 
 <details class="success">
     <summary>参考代码</summary>
+
 
 ```cpp
 //#include<bits/stdc++.h>
@@ -506,15 +742,166 @@ int main(){
 	return 0;
 }
 ```
+
 </details>
 
 # NOIP2015
+
+> [[NOIP 2015 提高组] 子串](https://www.luogu.com.cn/problem/P2679)
+
+求方案数，考虑 DP。
+
+DP 状态显然需要记录匹配到 $A,B$ 中的位置。同时，为了维护子串数量和字符状态，可以设计 $\textit{dp}_{i,j,k,l},l\in\set{0,1}$，表示用 $A_1,A_2,\cdots,A_i$ 中的 $k$ 个子串，匹配了 $B_1,B_2,\cdots,B_j$，$A_i$ 选与不选的方案数。
+
+则有：
+
+$$
+\begin{aligned}
+\textit{dp}_{i,j,k,0}&=\textit{dp}_{i-1,j,k,0}+\textit{dp}_{i-1,j,k,1}\\
+\textit{dp}_{i,j,k,1}&=
+\begin{cases}
+\textit{dp}_{i-1,j-1,k,1}+\left(\textit{dp}_{i-1,j-1,k-1,0}+\textit{dp}_{i-1,j-1,k-1,1}\right)&A_i=B_j\\
+0&A_i\neq B_j
+\end{cases}
+\end{aligned}
+$$
+
+<details class="success">
+    <summary>参考代码</summary>
+    <p>
+        滚动数组优化即可避免 MLE。
+    </p>
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+constexpr const int N=1000,M=200,K=200,P=1000000007;
+int n,m,k;
+char a[N+1],b[M+1];
+int f[2][M+1][K+1][2];
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	scanf("%d %d %d",&n,&m,&k);
+	scanf("%s%s",a+1,b+1);
+	f[0][0][0][0]=f[1][0][0][0]=1;
+	bool mode=0;
+	for(int i=1;i<=n;i++){
+		mode=!mode;
+		for(int j=1;j<=m;j++){
+			for(int kk=1;kk<=k;kk++){
+				if(a[i]==b[j]){
+					f[mode][j][kk][0]=(f[!mode][j][kk][0]+f[!mode][j][kk][1])%P;
+					f[mode][j][kk][1]=(1ll*f[!mode][j-1][kk][1]+f[!mode][j-1][kk-1][0]+f[!mode][j-1][kk-1][1])%P;
+				}else{
+					f[mode][j][kk][0]=(f[!mode][j][kk][0]+f[!mode][j][kk][1])%P;
+					f[mode][j][kk][1]=0;
+				}
+			}
+		}
+	}
+	printf("%d\n",(f[mode][m][k][0]+f[mode][m][k][1])%P);
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+</details>
 
 # NOIP2016
 
 # NOIP2017
 
 # NOIP2018
+
+> [[NOIP 2018 提高组] 货币系统](https://www.luogu.com.cn/problem/P5020)
+
+即从 $a_1,a_2,\cdots,a_n$ 中找出最少的 $m$ 个整数，使得这 $m$ 个整数均不能被其他整数表示出来。
+
+因此可以设 $\textit{dp}_{i,j}$ 表示使用 $a_1,a_2,\cdots,a_i$ 表示出 $j$ 的方案数，就是一个完全背包问题。
+
+记 $V=\max\limits_{i=1}^na_i$，答案即：
+
+$$
+\sum_{i=1}^{V}[\textit{dp}_{n,i}=1]
+$$
+
+<details class="success">
+    <summary>参考代码</summary>
+    <p>
+        使用的是一维数组的完全背包。
+    </p>
+
+```cpp
+#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+#include<set>
+using namespace std;
+constexpr const int N=100,V=25000;
+int n,a[N+1],dp[V+1];
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	int T;
+	scanf("%d",&T);
+	while(T--){
+		memset(dp,0,sizeof(dp));
+		scanf("%d",&n);
+		for(int i=1;i<=n;i++){
+			scanf("%d",a+i);
+			dp[a[i]]++;
+		}
+		for(int i=1;i<=V;i++){
+			for(int j=1;j<=n;j++){
+				if(i>a[j]&&dp[i-a[j]]){
+					dp[i]++;
+				}
+			}
+		}
+		int ans=0;
+		for(int i=1;i<=n;i++){
+			if(dp[a[i]]==1){
+				ans++;
+			}
+		}printf("%d\n",ans);
+	} 
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+</details>
+
+
 
 # NOIP2019
 
