--- a/_posts/2024-12-13-1.md
+++ b/_posts/2024-12-13-1.md
@@ -580,7 +580,60 @@ main(){
 
 ## 贪婪大陆
 
-见“[题解：贪婪大陆](/2024/12/14/6/)”
+见“[题解：贪婪大陆](/2024/12/14/6/)”。
+
+# 标记永久化
+
+所谓“标记永久化”，是因为有些时候懒标记上传、下传都不那么方便，这种时候就可以使用标记永久化解决。
+
+标记永久化流程：
+
+* 设修改区间为 $[L,R]$。
+
+  修改时，若 $[l,r]\subseteq[L,R]$，则可以更新对应节点的标记 $\textit{tag}$。
+
+  否则若 $[l,r]\cap[L,R]\neq\varnothing$，则更新对应节点的值 $\textit{value}$。
+
+* 设查询区间为 $[L,R]$。
+
+  查询时，若 $[l,r]\subseteq[L,R]$，则答案就是对应节点的值 $\textit{value}$。
+
+  否则若 $[l,r]\cap[L,R]\neq\varnothing$，则对应节点的答案是 $[l,r]$ 的 $\textit{tag}$ 在 $[l,r]\cap[L,R]$ 上的贡献与左右子区间答案之和。
+
+~~过于抽象。~~
+
+***
+
+以维护区间和为例。
+
+```cpp
+void add(int p,int l,int r,ll k){
+    t[p].value+=(min(r,t[p].r)-max(l,t[p].l)+1)*k;
+    if(l<=t[p].l&&t[p].r<=r){
+        t[p].tag+=k;
+        return;
+    }
+    if(l<=t[p<<1].r){
+        add(p<<1,l,r,k);
+    }
+    if(t[p<<1|1].l<=r){
+        add(p<<1|1,l,r,k);
+    }
+}
+ll query(int p,int l,int r){
+    if(l<=t[p].l&&t[p].r<=r){
+        return t[p].value;
+    } 
+    ll ans=(min(t[p].r,r)-max(t[p].l,l)+1)*t[p].tag;
+    if(l<=t[p<<1].r){
+        ans+=query(p<<1,l,r);
+    }
+    if(t[p<<1|1].l<=r){
+        ans+=query(p<<1|1,l,r);
+    }
+    return ans;
+}
+```
 
 # 总结
 
