--- a/_posts/2025-01-22-2.md
+++ b/_posts/2025-01-22-2.md
@@ -10,9 +10,9 @@ tags:
   - 题解
   - 普及/提高−
   - DP
-  - 树型DP
+  - 树形 DP
 words:
-  - 树型 DP
+  - 树形 DP
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P1122)
@@ -41,9 +41,9 @@ $$
 
 从叶子节点到根节点就是一条确定且唯一的路径。
 
-因此我们可以考虑树型 DP来解决此问题。
+因此我们可以考虑树形 DP来解决此问题。
 
-### 树型 DP
+### 树形 DP
 
 令 $dp_x$ 表示节点 $x$ 的子树内的最大子树和。
 
@@ -57,7 +57,7 @@ $$
 
 递推式得到了，那么就是求解了。
 
-一般情况下，树型 DP 都会写成递归的形式——在此处就是先求出子节点的答案，才能求出父节点的答案。
+一般情况下，树形 DP 都会写成递归的形式——在此处就是先求出子节点的答案，才能求出父节点的答案。
 
 ***
 
