--- a/_posts/2025-01-22-7.md
+++ b/_posts/2025-01-22-7.md
@@ -10,17 +10,17 @@ tags:
   - 题解
   - 普及+/提高
   - DP
-  - 树型DP
+  - 树形 DP
 words:
   - 换根DP
-  - 树型 DP
+  - 树形 DP
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P3478)
 
-# 树型 DP
+# 树形 DP
 
-依然是树型 DP。
+依然是树形 DP。
 
 首先，在根节点确定的情况下，深度之和显然可以 $\mathcal O(n)$ 求。
 
