--- a/_posts/2025-01-22-8.md
+++ b/_posts/2025-01-22-8.md
@@ -10,16 +10,16 @@ tags:
   - 题解
   - 普及+/提高
   - DP
-  - 树型DP
+  - 树形 DP
 words:
-  - 树型 DP
+  - 树形 DP
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P2986)
 
-# 树型 DP
+# 树形 DP
 
-换根树型 DP。
+换根树形 DP。
 
 令 $dis_x$ 表示节点 $x$ 的子树内不方便程度的和。
 
