--- a/_posts/2025-7-15-2.md
+++ b/_posts/2025-7-15-2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "题解：[PKUWC2018] 随机游走"
-subtitle: "洛谷P5643 | Min-max 容斥 | 树型 DP | 高维前缀和"
+subtitle: "洛谷P5643 | Min-max 容斥 | 树形 DP | 高维前缀和"
 date: 2025-7-15
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -12,10 +12,10 @@ tags:
   - 数学
   - 组合数学
   - DP
-  - 树型 DP
+  - 树形 DP
   - 容斥原理
 words:
-  - 树型DP
+  - 树形 DP
   - Min-max容斥
 ---
 
@@ -37,7 +37,7 @@ $$
 \sum_{T\subseteq S}(-1)^{\vert T\vert-1}E\left(\min_{i\in T}t_i\right)
 $$
 
-## 树型 DP
+## 树形 DP
 
 注意到 $n\leq18$，因此枚举 $T$ 是可以被接受的，考虑如何对确定的 $T$ 计算 $E\left(\min\limits_{i\in T}t_i\right)$。
 
@@ -78,7 +78,7 @@ b_u&=\dfrac{\sum\limits_{v\in\textit{son}_u}b_v+\textit{deg}_u}{\textit{deg}_u-\
 \end{cases}
 $$
 
-因此，可以通过树型 DP 求出每一个点的 $k_i,v_i$。考虑到根节点 $x$ 没有父节点，在初始公式 $$f_u=\dfrac{1}{\textit{deg}_u}\left(f_{\textit{father}_u}+\sum\limits_{v\in\textit{son}_u}f_v\right)+1$$ 中 $f_{\textit{father}_u}$ 就不应当出现，因此可视为 $0$，故：
+因此，可以通过树形 DP 求出每一个点的 $k_i,v_i$。考虑到根节点 $x$ 没有父节点，在初始公式 $$f_u=\dfrac{1}{\textit{deg}_u}\left(f_{\textit{father}_u}+\sum\limits_{v\in\textit{son}_u}f_v\right)+1$$ 中 $f_{\textit{father}_u}$ 就不应当出现，因此可视为 $0$，故：
 
 $$
 f_x=b_x
