--- a/_posts/2024-12-31-1.md
+++ b/_posts/2024-12-31-1.md
@@ -34,6 +34,7 @@ words:
   - 异或
   - shuffle()
   - bitset
+  - 0x3f0x7f0x800xc0
 ---
 
 # 快读快写
@@ -405,7 +406,7 @@ std::size_t fwrite(const void* buffer, std::size_t size, std::size_t count,std::
 
 **简而言之，是因为这些你不用脑子都能想到的优化编译器早想到了，用了你的反而会更慢**。
 
-~~也就是说我上面的那些 `inline` 根本没用~~。
+然而，**存在例外**。参见[此处](/2025/08/03/1/)，编译器有时可能**不会**自动 `inline`，从而导致效率低下。建议**一律手动 `inline`**。
 
 ## 内存跨度
 
@@ -709,3 +710,5 @@ shuffle(order.begin(),order.end(),Rand);
   `0x3f` 保证相加之后不会爆 `int`，实际为 $1061109567\approx10^9$。
 
 * $-\infty$：`0x80`。
+
+  `0xc0` 保证相加之后不会爆 `int`，实际为 $-1061109568\approx-10^9$。
