--- a/_posts/2025-01-23-3.md
+++ b/_posts/2025-01-23-3.md
@@ -157,8 +157,8 @@ int dfn[N+1];
 int ansSize;
 vector<int>ans[N+1];
 void Tarjan(int x,int last){
-	static int top,cnt,s[N+1],low[N+1];
-	dfn[x]=low[x]=++cnt;
+	static int top,s[N+1],low[N+1];
+	dfn[x]=low[x]=++top;
 	s[top]=x;
 	for(int i=g.h[x];i;i=g.a[i].r){
 		int &v=g.a[i].v;
@@ -171,7 +171,7 @@ void Tarjan(int x,int last){
 	if(dfn[x]==low[x]){
 		ans[++ansSize].resize(0);
 		while(s[top]!=x){
-			ans[ansSize].push_back(s[top--]);
+            ans[ansSize].push_back(s[top--]);
 		}ans[ansSize].push_back(s[top--]);
 	}
 }
