--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -3062,7 +3062,7 @@ $$
 
 若数论函数 $f(n)$ 满足 $f(1)=1$，且对于 $\forall x,y\in\N^*\land x\perp y$，有 $f(xy)=f(x)\cdot f(y)$，称 $f(n)$ 为**积性函数**。
 
-若数论函数 $f(n)$ 满足 $f(1)=1$，且对于 $\forall x,y\in\N^*$，有 $f(xy)=f(x)\cdot f(y)$，称 $f(n)$ 为**积性函数**。
+若数论函数 $f(n)$ 满足 $f(1)=1$，且对于 $\forall x,y\in\N^*$，有 $f(xy)=f(x)\cdot f(y)$，称 $f(n)$ 为**完全积性函数**。
 
 ## 基础部分
 
