--- a/_posts/2025-7-10-3.md
+++ b/_posts/2025-7-10-3.md
@@ -44,15 +44,21 @@ f_2x\equiv a_2\pmod{p_2}\\
 \end{cases}
 $$
 
-将第一个方程转化：
+和 exCRT 一样转化为同余方程后求解也可以做，但是比较繁杂，有更为简单的方法。
+
+设 $x_1$ 为 $f_1x\equiv a_1\pmod{p_1}$ 的一个解，则对于 $\forall r\in\N$，$x_1+rp_1$ 均为其解。
+
+则方程组的解均可以表述为 $x+rp_1$，有：
 
 $$
-f_1x\equiv a_1+p_1x\equiv a_1\pmod{p_1}
+\begin{aligned}
+f_2(x+rp_1)&\equiv a_2\pmod{p_2}\\
+f_2x+rp_1+sp_2&=a_2\\
+rp_1+sp_2&=a_2-f_2x\\
+\end{aligned}
 $$
 
-$$
-f_2(a_1+p_1x)\equiv a_2\pmod{p_2}
-$$
+exgcd 即可求出 $r,s$。
 
 因此可以写出代码。
 
