--- a/_posts/2025-7-25-2.md
+++ b/_posts/2025-7-25-2.md
@@ -20,7 +20,7 @@ words:
 
 > [Acwing3662 最大上升子序列和](/2025/01/18/2/)
 >
-> [[NOIP 2013 提高组] 花匠](/2025/07/25/1/#noip2013)
+> [[NOIP 2013 提高组] 花匠](/2025/07/25/1/#noip-2013-提高组-花匠)
 
 树状数组可以用于维护前后缀最值。
 
