--- a/_posts/2025-7-26-1.md
+++ b/_posts/2025-7-26-1.md
@@ -891,7 +891,7 @@ $$
 
 修改 $g_{i,1}$ 时，只需要**在线段树上单点修改转移矩阵**即可。
 
-之后便是算出 $\begin{bmatrix}f_{\textit{top}_x,0}\\f_{\textit{top}_x,0}\end{bmatrix}$，从而利用 $f_{\textit{top}_x,0},f_{\textit{top}_x,0}$ 更新 $\textit{father}_{\textit{top}_x}$ 的转移矩阵。
+之后便是算出 $\begin{bmatrix}f_{\textit{top}_x,0}\\f_{\textit{top}_x,1}\end{bmatrix}$，从而利用 $f_{\textit{top}_x,0},f_{\textit{top}_x,1}$ 更新 $\textit{father}_{\textit{top}_x}$ 的转移矩阵。
 
 考虑到只有 $\mathcal O(\log n)$ 条重链，而线段树单次修改 $\mathcal O(\log n)$，故修改总复杂度 $\mathcal O\left(\log^2n\right)$。
 
@@ -1139,9 +1139,13 @@ int main(){
 ```
 </details>
 
+## 全局平衡二叉树
+
+
+
 # 总结
 
-DDP，其实就是将普通递推式改为了广义矩阵乘法的形式。
+DDP，其实就是将重子节点和轻子节点的贡献分开，从而将普通递推式改为了广义矩阵乘法的形式。
 
 这样的好处就是可以维护**转移矩阵**，从而利用数据结构优化。
 
