--- a/_posts/2025-7-6-1.md
+++ b/_posts/2025-7-6-1.md
@@ -121,7 +121,7 @@ $$
 $$
 \begin{aligned}
 f(x)&=\sum_{i=1}^ny_i\frac{\frac{\prod\limits_{j=1}^n(x-j)}{x-i}}{(-1)^{n-i}(i-1)!(n-i)!}\\
-&=\sum_{i=1}^n(-1)^{n-i}y_i\frac{\prod\limits_{j=1}^n(x-j)}{(i-1)!(n-i)!(x-1)}\\
+&=\sum_{i=1}^n(-1)^{n-i}y_i\frac{\prod\limits_{j=1}^n(x-j)}{(i-1)!(n-i)!(x-i)}\\
 \end{aligned}
 $$
 
