--- a/_posts/2024-12-13-1.md
+++ b/_posts/2024-12-13-1.md
@@ -635,6 +635,12 @@ ll query(int p,int l,int r){
 }
 ```
 
+# 线段树合并
+
+一般合并**动态开点权值线段树**，且两棵树的根节点区间相同，对应节点也相同。可以做到 $\mathcal O(n\log n)$ 合并。
+
+[参见此处](/2025/08/11/4/)。
+
 # 总结
 
 事实上，线段树最难的部分就是**设计状态与状态转移**，尤其是**懒标记**。
